--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Example brunch application</title>
+  <title>How 2 WWW - Topics in Web Development</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="stylesheets/app.css">
   <script src="javascripts/vendor.js"></script>
@@ -14,6 +14,8 @@
   <script>require('initialize');</script>
 </head>
 <body>
-  
+
+
+
 </body>
 </html>
