better strat for doing labels

--- a/d3/index.html
+++ b/d3/index.html
@@ -18,39 +18,39 @@
 			//console.log(data);
       cleanTaxData = shapeData(data);
       stateTaxData = getSummaryData(cleanTaxData);
-      console.log(stateTaxData);
+      //console.log(stateTaxData);
       buildPieChart(stateTaxData);
 		});
 	});
 	
+	// now using the following example
+	// http://bl.ocks.org/2295263
 	var buildPieChart = function(data) {	
   	var m = 10,
-  	    r = 200,
+  	    r = 400,
   	    z = d3.scale.category20c();
   	    
-    var svg = d3.select("body").selectAll("svg").
-      data(data, function(d) { 
-//        console.log(d);
-//        return d.data.income; 
-        return d;
-      }).
-      enter().append("svg:svg").
-      attr("width", (r + m) * 2).
-      attr("height", (r + m) * 2).
-      append("svg:g").
-      attr("transform", "translate(" + (r + m) + "," + (r + m) + ")");
+    var svg = d3.select("body").
+      .selectAll("svg")
+      .data(data)
+      .enter().append("svg:svg")
+      .attr("width", (r + m) * 2)
+      .attr("height", (r + m) * 2)
+      .append("svg:g")
+      .attr("transform", "translate(" + (r + m) + "," + (r + m) + ")");
+  
+    var pie = d3.layout.pie()
+      .value(function(d) { return d.income; });
         
-    svg.selectAll("path").
-      data(d3.layout.pie(), function(d) { 
-        console.log(d); 
-        return d.income;
-      }).
-      enter().append("svg:path").
-      attr("d", d3.svg.arc().
-      outerRadius(r)).
-      style("fill", function(d, i) { return z(i); });
-
+    svg.selectAll("path")
+      .data(pie)
+      .enter().append("svg:path")
+      .attr("d", d3.svg.arc()
+      .outerRadius(r))
+      .style("fill", function(d, i) { return z(i); });
 	};
+	
+
 	
 	var getSummaryData = function(data) {
     var retval = [];
@@ -60,7 +60,6 @@
           state: row.state_abbreviation,
           income: row.wages_and_salaries_incomes_in_thousands
         });
-//        retval.push(row.wages_and_salaries_incomes_in_thousands);
       }
     });
     return [retval];
