sorting, but TX is way out of place

--- a/d3/index.html
+++ b/d3/index.html
@@ -105,6 +105,8 @@
         });
       }
     });
+    retval = _.sortBy(retval, function(item) { return -item.income; });
+    console.log(retval);
     return [retval];
 	};
 	
