--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,8 @@
     </head>
     <body>
         <div class="container">
-
+          <h1>how2www</h1>
+          <h2>adventures in code</h2>
         </div>
 
         <!--[if lt IE 7]>
